# cmake-config-sample

./: CMakeLists.txt  README.md  build_and_run.sh  gen_build.sh
include/: torus.hpp
src/: test.cpp  torus.cc
